messing around with JS, fixed links not wrapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,7 @@
+/******************************
+General Styles
+******************************/
 body {
-    background-color: lightblue;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
     color: #fff;
@@ -8,12 +10,14 @@ body {
 
 section {
    padding: 20px 20px;
-   /*text-align: center;*/
-   font-size: 16px;  
 }
+
+/******************************
+Text Styles
+******************************/
+
 h1 {
     font-size: 80px;
-    line-height: 1x;
     font-weight: 700;
     color: white;
 }
@@ -24,25 +28,32 @@ h2 {
     color: #555;
 }
 
+/*centered section header*/
 h3 {
     text-align: center;
 }
 h4 {
     margin: 0;
-    
+}
+a:hover {
+    text-decoration: none;
+    color: #e0e0e0;
 }
 
+section p {
+    display: inline-block;
+}
 section>p>a {
     color: white;
     font-size: 1.4em;
     font-weight: 700;
-    display: inline-block;
+    /*display: inline-block;*/
     margin: 0 10px 0 0;
 }
-a {
-    /*color: #333;*/
-    /*font-size: 1em;*/
-    /*font-weight: 400;*/
+section>p>a:hover {
+    text-decoration: underline;
+    color: white;
+    cursor: pointer;
 }
 
 .colored-link-1 {
@@ -50,24 +61,16 @@ a {
     text-decoration: underline;
 }
 
-
-a:hover {
-    text-decoration: none;
-    color: #e0e0e0;
-}
-
-
-section>p>a:hover {
-    /*font-size: 1.5em;*/
+a {
+    /*color: #5c5c5c;*/
     text-decoration: underline;
-    color: white;
-    cursor: pointer;
+       word-wrap: break-word;
+
 }
 
-section p {
-    display: inline-block;
-    /*padding: 10px;*/
-}
+
+
+
 
 hr {
     border: 0;
@@ -96,16 +99,12 @@ border-top: none;
 /**************************************
             SECTION COLORS
 **************************************/
-.one {
+.headsection {
     background-color: #FAD089;
-    /*background-color: #047C8C;*/
-    /*background-color: #1D8281;*/
-    /*background-color: #FFBC67;*/
     min-height: 250px;
-    text-align: center;
 
 }
-    .one h1 {
+    .headsection h1 {
         letter-spacing: -0.04em;
         float: right;
         margin: 0;
@@ -113,7 +112,7 @@ border-top: none;
 
 
     }
-    .one h2 {
+    .headsection h2 {
         margin: 0;
         float: right;
         letter-spacing: -0.04em;
@@ -121,7 +120,7 @@ border-top: none;
         margin: 0;
     }
 
-    .one .container {
+    .headsection .container {
         padding-top: 40px;
         padding: 10px;
         width: auto;
